스타일 수정 및 파이어베이스 오류별 번역 유틸함수 추가

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;600&family=Righteous&display=swap" rel="stylesheet" />
+    <link rel="shortcut icon" href="/public/img/logo_icon.png" />
     <title>MINI</title>
   </head>
   <body>
